--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ header .logo img{
 
 header .nav{
   position: relative;
-  width: 427.5px;
+  width: 305px;
   display: flex;
   flex-direction: row;
   font-family: 'Quicksand-Light';
@@ -169,7 +169,7 @@ header .nav .nav_menu_btn{
   height: 100vh;
   max-width: 1920px;
   /* min-width: 1280px; */
-  /* min-height: 1080px; */
+  min-height: 1080px;
   width: 100%;
   left: 0;
   right: 0;
@@ -541,186 +541,12 @@ header .nav .nav_menu_btn{
   border-bottom: #fff 0.5px solid;
 }
 
-footer{
-  width:100%;
-  background-color: white;
-}
-
-.footer{
-  position:relative;
-  height: 720px;
-  width: 100%;
-  max-width: 1920px;
-  /* min-width: 1280px; */
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  padding: 60px;
-  display: flex;
-  flex-direction: column;
-  background:white;
-}
-
-.footer .container{
-  display: flex;
-  flex-direction: row;
-}
-
-.footer .container .left{
-  height: 600px;
-  width: 66%;
-  margin-right:30px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.footer .container .right{
-  height: 600px;
-  width:33%;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
-
-.footer .container .left .title_footer{
-  font-family: 'Quicksand-Regular';
-  padding: 0 0 30px 0;
-  font-size: 20px;
-  line-height: 24px;
-  border-bottom: black 0.5px solid;
-  width:100%;
-}
-
-.footer .container .left .sitemap{
-  padding: 60px 0 0 0;
-  display: flex;
-  flex-direction: row;
-}
-
-.footer .container .left .sitemap .col{
-  width: 25%;
-  font-family: 'Quicksand-Regular';
-  font-size: 20px;
-  line-height: 24px;
-  display: flex;
-  flex-direction: column;
-}
-.footer .container .left .sitemap .col .row{
-  font-family: 'NotoSerifKR-Regular';
-  padding-bottom: 30px;
-  line-height: 24px;
-}
-
-.footer .container .right .title_footer{
-  font-family: 'NotoSerifKR-Bold';
-  padding: 0 0 30px 0;
-  font-size: 20px;
-  line-height: 24px;
-  border-bottom: black 0.5px solid;
-  width:100%;
-}
-.footer .container .right .helpers{
-  padding: 60px 0 0 0;
-  display: flex;
-  flex-direction: row;
-}
-
-.footer .container .right .helpers .col{
-  width: 33%;
-  font-family: 'Quicksand-Regular';
-  font-size: 20px;
-  line-height: 35px;
-  display: flex;
-  flex-direction: column;
-}
-.footer .container .right .helpers .col.names{
-  width: 33%;
-  font-family: 'NotoSerifKR-Regular';
-  font-size: 20px;
-  line-height: 35px;
-  display: flex;
-  flex-direction: column;
-}
-
-.footer .container .right .helpers .col:first-child{
-  width:52%;
-}
-.footer .container .right .helpers .col:nth-child(2){
-  width:26%;
-}
-.footer .container .right .helpers .col:nth-child(3){
-  width: 22%;
-}
-
-.footer .container .right .sponsor_from{
-  font-family: 'NotoSerifKR-Regular';
-  font-size: 20px;
-  line-height: 24px;
-  border-top: black 0.5px solid;
-  padding-top: 30px;
-  margin-top:155px;
-} 
-
-.footer .container .left .copyright{
-  font-family: 'Quicksand-Regular';
-  color: #969696;
-  font-size: 18px;
-  line-height: 21.6px;
-  display: flex;
-  /* justify-content: space-between; */
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-
-.footer .container .left .copyright .l{
-  width:51%;
-  display: flex;
-  align-items: end;
-}
-
-.footer .container .left .copyright .r{
-  width:38%;
-  display: flex;
-  align-items: end;
-}
-
-.footer .container .left .copyright .instagram{
-  width:11%;
-}
-.footer .container .left .copyright .instagram img{
-  width:40px;
-}
-
-.footer .container .right .sponsor_icons{
-  display: flex;
-  /* justify-content: space-between; */
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-
-.footer .container .right .sponsor_icons img.woman{
-  width: 213px;
-  margin-right: 90px;
-}
-
-.footer .container .right .sponsor_icons img.butterknife{
-  width: 134px;
-}
 
 @media screen and (max-width: 1280px) {
 
   .container.about{
-    height:75vh;
+    /* height:75vh; */
 
   }
-  .footer .container .right .sponsor_icons img.woman{
-    display: none;
-  }
-  
-  .footer .container .right .sponsor_icons img.butterknife{
-    display: none;
-  }
+
 }
