--- a/page.css
+++ b/page.css
@@ -102,6 +102,11 @@ header .nav .nav_menu_btn img{
   height: 1400px;
 }
 
+.container.title.page5{
+  background: #8cfa64;
+  height: 1440px;
+}
+
 
 .container.title .page_title{
   margin-top: 150px;
@@ -243,6 +248,7 @@ header .nav .nav_menu_btn img{
   color:#c882fa;
   /* padding-bottom: 20px; */
   transition: 0.75s;
+  padding-bottom: 30px;
 }
 
 
@@ -252,7 +258,11 @@ header .nav .nav_menu_btn img{
   line-height: 37px;
   color:black;
   transition: 0.75s;
-  padding-top:30px;
+  padding:0 0 50px 0;
+}
+
+.container .table .right .interview_a +.container .table .right .interview_a{
+  padding-top: 0;
 }
 
 .container .table .left .interview_title.p2,
@@ -277,6 +287,14 @@ header .nav .nav_menu_btn img{
 .container .table .left .interview_q.p4,
 .container .table .right .interview_q.p4{
   color:#f06e5a;
+}
+
+.container .table .left .interview_title.p5,
+.container .table .right .interview_title.p5,
+.container .table .left .interview_q.p5,
+.container .table .right .interview_q.p5{
+  color:#8cfa64;
+  text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 
 .container .table.heart{
@@ -320,6 +338,14 @@ header .nav .nav_menu_btn img{
   float: right;
   width: 460px;
   height: 632px;
+}
+
+
+.container .table .left .heart_left_p5 {
+  shape-outside: polygon(100% 0%, 58% 115%, 12% 59%, 8% 50%, 5% 37%, 5% 19%, 16% 0);
+  float: right;
+  width: 458px;
+  height: 336px;
 }
 
 
